finals added, tests corrected