@@ -3,7 +3,6 @@ package com.gamesage.store.domain.repository;
 import com.gamesage.store.domain.model.Game;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -13,33 +12,31 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 class GameRepositoryTest {
 
     @Test
-    void findBy_NotFound() {
+    void findGame_NotFound() {
         GameRepository repository = new GameRepository();
         assertTrue(repository.findById(1213313313).isEmpty());
     }
 
     @Test
-    void findBy_Success() {
+    void findGame_Success() {
         GameRepository repository = new GameRepository();
-        List<Game> games = Arrays.asList(
+        List<Game> games = List.of(
                 new Game("addedGame1", null),
                 new Game("addedGame2", null)
         );
         repository.createAll(games);
-        Game game = games.get(games.size() - 1);
+        Game game = games.get(0);
         Optional<Game> foundGame = repository.findById(game.getId());
 
         assertTrue(foundGame.isPresent());
-        if (foundGame.isPresent()) {
-            assertEquals(game, foundGame.get());
-        }
+        assertEquals(Optional.of(game), foundGame);
     }
 
     @Test
     void createAll() {
         GameRepository repository = new GameRepository();
 
-        List<Game> games = Arrays.asList(
+        List<Game> games = List.of(
                 new Game("addedGame1", null),
                 new Game("addedGame2", null)
         );
